# be_partofme

./: .env  Cargo.toml  Makefile  README.md
migrations/2025-05-15-043745_create_users/: up.sql
src/: config.rs  db.rs  main.rs
src/handlers/: user_handler.rs
src/middleware/: auth.rs
src/models/: auth.rs  user.rs
src/routes/: users.rs
