[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-lab = "0.19"
actix-rt = "2"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
tracing-actix-web = "0.5"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }